examples/test/testpolicy766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy766
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key7: value34
      key14: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value35
      podSelector:
        matchLabels:
          key5: value13
          key20: value42
